--- a/TCPL/CE/E1.md
+++ b/TCPL/CE/E1.md
@@ -300,6 +300,199 @@ likely to uncover bugs if there are any?
 ***Exercise 1-12.*** Write a program that prints its input one word per line. 
 
   I'll comeback to this at a later time, I don't know how to solve this yet.
+
+**Exercise 1-13.**   
+    #include <stdio.h>
+  
+    /* Exercise 1-13. Write a program to print a histogram of the lengths of words in its input. It is
+    easy to draw the histogram with the bars horizontal; a vertical orientation is more challenging. */
+    main()
+    {
+        int c, i, j;
+        int ncc[26], nlc[26];
+        
+        for (i = 0; i < 26; ++i)
+            ncc[i] = nlc[i] = 0;
+    
+        while ((c = getchar()) != EOF) {
+            if (c >= 'a' && c <= 'z')
+                ++nlc[c-97];
+                
+            else if (c >= 'A' && c <= 'Z')
+                ++ncc[c-65];
+    
+        }
+        
+        printf("\t\tSMALL LETTERS AND LETTER COUNTS\n");
+        for (i = 0; i < 26; ++i) {
+            printf("%c | ", 97+i);
+            for (j = 0; j < nlc[i]; ++j)
+                printf("*");
+                
+            if (nlc[i] > 0)
+                printf(" (%02d)\n", nlc[i]);
+            else
+                printf("\n");
+        }
+        
+        printf("  |_____________________________________________________\n");
+        printf("          5     10    15    20    25    30    45    50    \n");
+        
+        printf("\n\t\tCAPITAL LETTERS AND LETTER COUNTS\n");
+        for (i = 0; i < 26; ++i) {
+            printf("%c | ", 65+i);
+            for (j = 0; j < ncc[i]; ++j)
+                printf("*");
+                
+            if (ncc[i] > 0) 
+                printf(" (%02d)\n", ncc[i]);
+            else
+                printf("\n");
+        }
+        
+        printf("  |_____________________________________________________\n");
+        printf("          5     10    15    20    25    30    45    50    \n");
+    
+    }
+
+***Exercise 1.14.*** Write a program to print a histogram of the lengths of words in its input. It is
+easy to draw the histogram with the bars horizontal; a vertical orientation is more challenging. 
+
+  I am going to solve this some other time.
+  
+***Exercise 1.15.*** Rewrite the temperature conversion program of Section 1.2 to use a function for conversion.
+
+    #include <stdio.h>
+    
+    #define LOWER 0     /* lower limit */
+    #define UPPER 300   /* upper limit */
+    #define STEP 20     /* step size */
+    
+    /* Exercise 1.15. Rewrite the temperature conversion program of Section 1.2 to use a function
+    for conversion. */
+    
+    float fahrToCelsius(int fahr);
+    
+    main()
+    {
+        int fahr;
+        
+        for (fahr = LOWER; fahr <= UPPER; fahr = fahr + STEP)
+            printf("%3d %6.1f\n", fahr, fahrToCelsius(fahr));
+    }
+    
+    float fahrToCelsius(int fahr)
+    {
+        return (5.0/9.0)*(fahr-32);
+    }
+    
+    I have no need to test this since it's pretty much the same to the other programs I made.
+    
+***Exercise 1.16.*** Revise the main routine of the longest-line program so it will correctly print the
+length of arbitrary long input lines, and as much as possible of the text. 
+
+  Refer to print_longest_line-0.c
+  
+  **Code**
+  
+    #include <stdio.h>
+    #define MAXLINE 1000    /* maximum input line length */
+    
+    int getline(char line[], int maxline);
+    void copy(char to[], char from[]);
+    int countChar(char string[]);
+    /* print the longest input line */
+    main()
+    {
+        int len, charLen;                /* current line length */
+        int max;                /* maximum length seen so far */
+        char line[MAXLINE];     /* current input line */
+        char longest[MAXLINE];   /* longest line saved here */
+        
+        max = 0;
+        while ((len = getline(line, MAXLINE)) > 0)
+            if (len > max) {
+                max = len;
+                copy(longest, line);
+            }
+        if (max > 0) {    /* there was a line */
+            charLen = countChar(longest);
+            printf("%d %s %d\n", len, longest, charLen);
+        }
+        return 0;
+    }
+    
+    /* getline: read a line into s, return length */
+    int getline(char s[], int lim)
+    {
+        int c, i;
+        
+        for (i=0; i < lim-1 && (c=getchar())!=EOF && c!='\n'; ++i)
+            s[i] = c;
+        if (c == '\n') {
+            s[i] = c;
+            ++i;
+        }
+        s[i] = '\0';
+        return i;
+    }
+    
+    /* copy: copy 'from' into 'to' assume to is big enough */
+    void copy(char to[], char from[])
+    {
+        int i;
+        
+        i = 0;
+        while ((to[i] = from[i]) != '\n')
+            ++i;
+    }
+    
+    /* countChar: count the characters found in the input */
+    int countChar(char string[])
+    {
+        int i = 0;
+        
+        while (string[i] != '\0'){
+            ++i;
+        }
+        return i;
+    }
   
 
+***Exercise 1.17.*** Write a program to print all input lines that are longer than 80 characters. 
   
+  Refer to print_longest_line-1.c
+  
+***Exercise 1.18.*** Write a program to remove trailing blanks and tabs from each line of input, and to delete entirely 
+blank lines. 
+
+  Refer to no_blanks-0.c
+  
+  **Code**
+  
+    #include <stdio.h>
+  
+    /* Exercise 1.18. Write a program to remove trailing blanks and tabs from each line of input, and to delete entirely 
+    blank lines.  */
+    main()
+    {
+        int c;
+        
+        while ((c = getchar()) != EOF)
+            if (c != ' ' || c == '\t')
+                putchar(c);
+        return 0;
+    }
+
+  **Powershell**
+  
+    PS <..LOC..> cc no_blanks-0.c
+    PS <..LOC..> ./a
+    Exilon Black
+    ExilonBlack
+    ^Z
+    PS <..LOC..> ./a
+    
+***Exercise 1.19.***
+
+***Exercise 1.15.***
