Update and rename chapter_1.md to C1.md

--- a/TCPL/CN/C1.md
+++ b/TCPL/CN/C1.md
@@ -341,6 +341,48 @@ The C Programming Language Chapter 1 - A Tutorial Introduction
   it stops collecting when the array is full, even if no newline has been seen. By testing the length and the last 
   character returned, main can determine whether the line was too long, and then cope as it wishes.
   
-  In the interests of brevity, we have ignored this issue. 
+**1.10 External Variables and Scope**
 
+  The variables in main, such as line, longest, etc., are private or local to main.
   
+  Because they are declared within main, no other function can have direct access to them.
+  
+  The same is true of the variables in other functions; for example, the variable i in getline is unrelated to the i in
+  copy.
+  
+  Each local variable in a function comes into existence only when the function is called,
+  and disappears when the function is exited. 
+  
+  external variables are globally accessible, they can be used instead of argument lists to communicate data between 
+  functions.
+  
+  Furthermore, because external variables remain in existence permanently, rather than appearing and disappearing as 
+  functions are called and exited, they retain their values even after the functions that set them have returned. 
+  
+  An external variable must be defined, exactly once, outside of any function; this sets aside storage for it.
+  
+  The variable must also be declared in each function that wants to access it; this states the type of the variable.
+  
+  The declaration may be an explicit extern statement or may be implicit from context.
+  To make the discussion concrete, let us rewrite the longest-line program with line, longest, and max as external 
+  variables.
+  
+  This requires changing the calls, declarations, and bodies of all three functions. 
+
+  You should note that we are using the words definition and declaration carefully when we refer to external variables in
+  this section.
+  
+  ``Definition'' refers to the place where the variable is created or assigned storage; ``
+  
+  declaration'' refers to places where the nature of the variable is stated but no storage is allocated. 
+  
+  By the way, there is a tendency to make everything in sight an extern variable because it appears to simplify 
+  communications - argument lists are short and variables are always there when you want them.
+  
+  But external variables are always there even when you don't want them.
+  
+  Relying too heavily on external variables is fraught with peril since it leads to programs whose data connections are 
+  not all obvious - variables can be changed in unexpected and even inadvertent ways, and the program is hard to modify. 
+  
+  The second version of the longest-line program is inferior to the first, partly for these reasons, and partly because 
+  it destroys the generality of two useful functions by writing into them the names of the variables they manipulate. 
