--- a/TCPL/CE/E1.md
+++ b/TCPL/CE/E1.md
@@ -230,7 +230,9 @@ that is, from 300 degrees to 0.
 ***Exercise 1-8.*** Write a program to count blanks, tabs, and newlines.
   
   Refer to symbol_count-0.c
+  
   **Code**
+  
     #include <stdio.h>
   
     /* Exercise 1-8. Write a program to count blanks, tabs, and newlines. */
@@ -254,6 +256,7 @@ that is, from 300 degrees to 0.
     }
   
   **Powershell**
+  
     PS <..loc..> cc symbol_count-0.c
     PS <..loc..< ./a
     EXILON BLACK
@@ -266,7 +269,7 @@ that is, from 300 degrees to 0.
 ***Exercise 1-9.*** Write a program to copy its input to its output, replacing each string of one or more blanks by a 
 single blank. 
 
-  I'll comeback to this at a later time, I don't know how to solve this yet.
+  Refer to copy-2.c
 
 ***Exercise 1-10.*** Write a program to copy its input to its output, replacing each tab by \t, each
 backspace by \b, and each backslash by \\. This makes tabs and backspaces visible in an
@@ -302,6 +305,7 @@ likely to uncover bugs if there are any?
   I'll comeback to this at a later time, I don't know how to solve this yet.
 
 **Exercise 1-13.**   
+
     #include <stdio.h>
   
     /* Exercise 1-13. Write a program to print a histogram of the lengths of words in its input. It is
@@ -355,8 +359,7 @@ likely to uncover bugs if there are any?
     
     }
 
-***Exercise 1.14.*** Write a program to print a histogram of the lengths of words in its input. It is
-easy to draw the histogram with the bars horizontal; a vertical orientation is more challenging. 
+***Exercise 1.14.*** Frequency
 
   I am going to solve this some other time.
   
@@ -386,7 +389,7 @@ easy to draw the histogram with the bars horizontal; a vertical orientation is m
         return (5.0/9.0)*(fahr-32);
     }
     
-    I have no need to test this since it's pretty much the same to the other programs I made.
+    I have no need to test this since it's pretty much the same to the other programs I made
     
 ***Exercise 1.16.*** Revise the main routine of the longest-line program so it will correctly print the
 length of arbitrary long input lines, and as much as possible of the text. 
@@ -493,6 +496,20 @@ blank lines.
     ^Z
     PS <..LOC..> ./a
     
-***Exercise 1.19.***
+***Exercise 1.19.*** Write a reverse function.
 
-***Exercise 1.15.***
+  Refer to reverse-0.c
+
+***Exercise 1.20.***
+  
+  Refer to detab-0.c
+  
+***Exercise 1.21.***
+  
+  Refer to entab-0.c
+  
+***Exercise 1.22.***
+***Exercise 1.23.***
+***Exercise 1.24.***
+  
+  
