--- a/TCPL/CE/E1.md
+++ b/TCPL/CE/E1.md
@@ -302,7 +302,7 @@ likely to uncover bugs if there are any?
   
 ***Exercise 1-12.*** Write a program that prints its input one word per line. 
 
-  I'll comeback to this at a later time, I don't know how to solve this yet.
+  Refer to print_all_words-0.c
 
 **Exercise 1-13.**   
 
