--- a/TCPL/C2/C2.md
+++ b/TCPL/C2/C2.md
@@ -43,4 +43,20 @@ can have and what operations can be performed on it.
       <td>Type</td>
       <td>Description</td>
     </tr>
+    <tr>
+      <td>`char`</td>
+      <td>a single byte, capable of holding one character in the local character set</td>
+    </tr>
+    <tr>
+      <td>`int`</td>
+      <td>an integer, typically reflecting the natural size of integers on the host machine</td>
+    </tr>
+    <tr>
+      <td>`float`</td>
+      <td>single-precision floating point</td>
+    </tr>
+    <tr>
+      <td>`double`</td>
+      <td>double-precision floating point</td>
+    </tr>
   </table>
