--- a/TCPL/C2/C2.md
+++ b/TCPL/C2/C2.md
@@ -1,4 +1,4 @@
-PS L-CS\TCPL\C1\> more chapter_1.md
+PS L-CS\TCPL\C1\> more C2.md
 ====
 
 The C Programming Language Chapter 2 - Types, Operators and Expressions
@@ -36,7 +36,9 @@ can have and what operations can be performed on it.
   It's wise to choose variable names that are related to the purpose of the variable, and that are unlikely to get mixed 
   up typographically.
   
-  <p align='center'> C TYPES</p>
+  **2.2 Data Types and Sizes**
+  
+  **<p align='center'> C TYPES</p>**
   
   <table>
     <tr>
@@ -60,3 +62,35 @@ can have and what operations can be performed on it.
       <td>double-precision floating point</td>
     </tr>
   </table>
+  
+  In addition, there are a number of qualifiers that can be applied to these basic types. short and long apply to 
+  integers: 
+ 
+    short int sh;
+    long int counter;
+    
+  The word int can be omitted in such declarations, and typically it is.
+  
+  The intent is that short and long should provide different lengths of integers where practical; `int` will normally be
+  the natural size for a particular machine.
+  
+  `short` is often 16 bits long, and `int` either 16 or 32 bits.
+  
+  Each compiler is free to choose appropriate sizes for its own hardware, subject only to the the restriction that 
+  `short`s and `int`s are at least 16 bits, `longs` are at least 32 bits, and `short` is no longer than `int`, which is no
+  longer  than `long`. 
+
+  The qualifier `signed` or `unsigned` may be applied to `char` or any integer. `unsigned` numbers are always positive or 
+  zero, and obey the laws of arithmetic modulo `2^n`, where `n` is the number of bits in the type.
+  
+  So, for instance, if `chars` are 8 bits, `unsigned` char variables have values between 0 and 255, while `signed` chars 
+  have values between -128 and 127 (in a two's complement machine.)
+  
+  Whether plain chars are signed or unsigned is machine-dependent, but printable characters are always positive. 
+
+  The type `long double` specifies extended-precision floating point. As with integers, the sizes of floating-point 
+  objects are implementation-defined; `float`, `double` and `long double` could represent one, two or three distinct 
+  sizes. 
+  
+  The standard headers `<limits.h>` and `<float.h>` contain symbolic constants for all of these sizes, along with other 
+  properties of the machine and compiler.
