--- a/TCPL/C2/C2.md
+++ b/TCPL/C2/C2.md
@@ -94,3 +94,196 @@ can have and what operations can be performed on it.
   
   The standard headers `<limits.h>` and `<float.h>` contain symbolic constants for all of these sizes, along with other 
   properties of the machine and compiler.
+
+**2.3 Constants**
+
+  An integer constant like 1234 is an `int`. A `long` constant is written with a terminal l (ell) or L, as in 123456789L;
+  an integer constant too big to fit into an int will also be taken as a `long`.
+  
+  Unsigned constants are written with a terminal u or U, and the suffix ul or UL indicates `unsigned long`. 
+
+  `e` in `1e-2` is an exponent.
+  
+  The value of an integer can be specified in octal or hexadecimal instead of decimal.
+  
+  A leading 0 (zero) on an integer constant means octal; a leading 0x or 0X means hexadecimal.
+  
+  For example, decimal 31 can be written as 037 in octal and 0x1f or 0x1F in hex.
+  
+  Octal and hexadecimal constants may also be followed by L to make them `long` and U to make them `unsigned`: 
+  0XFUL is an unsigned `long` constant with value 15 decimal. 
+
+  A character constant is an integer, written as one character within single quotes, such as 'x'. 
+  
+  The value of a character constant is the numeric value of the character in the machine's character set.
+  
+  For example, in the ASCII character set the character constant '0' has the value 48, which is unrelated to the numeric 
+  value 0. 
+  
+  If we write '0' instead of a numeric value like 48 that depends on the character set, the program is independent of the
+  particular value and easier to read.
+  
+  Character constants participate in numeric operations just as any other integers, although they are most often used in 
+  comparisons with other characters. 
+
+  A constant expression is an expression that involves only constants.
+  
+  Such expressions may be evaluated at during compilation rather than run-time, and accordingly may be used in any place
+  that a constant can occur, as in 
+ 
+    #define MAXLINE 1000
+    char line[MAXLINE+1];
+
+  or 
+ 
+    #define LEAP 1 /* in leap years */
+    int days[31+28+LEAP+31+30+31+30+31+31+30+31+30+31];
+    
+  A string constant, or string literal, is a sequence of zero or more characters surrounded by double quotes, as in 
+ 
+    "I am a string"
+
+  or 
+ 
+    "" /* the empty string */
+
+  The quotes are not part of the string, but serve only to delimit it.
+  
+  The same escape sequences used in character constants apply in strings; \" represents the double-quote character. 
+  
+  String constants can be concatenated at compile time: 
+ 
+    "hello, " "world"
+
+  is equivalent to 
+ 
+    "hello, world"
+
+  This is useful for splitting up long strings across several source lines. 
+
+  Technically, a string constant is an array of characters. The internal representation of a string has a null character 
+  '\0' at the end, so the physical storage required is one more than the number of characters written between the quotes. 
+  This representation means that there is no limit to how long a string can be, but programs must scan a string 
+  completely to determine its length.
+  
+  The standard library function `strlen`(s) returns the length of its character string argument s, excluding the terminal
+  '\0'. Here is our version:
+ 
+    /* strlen: return length of s */
+    int strlen(char s[])
+    {
+      int i;
+      while (s[i] != '\0')
+        ++i;
+      return i;
+    }
+
+  `strlen` and other string functions are declared in the standard header `<string.h>`.
+
+  There is one other kind of constant, the enumeration constant. An enumeration is a list of constant integer values, as 
+  in 
+   
+      enum boolean { NO, YES };
+  
+  The first name in an enum has value 0, the next 1, and so on, unless explicit values are specified.
+  
+  If not all values are specified, unspecified values continue the progression from the last specified value, as the 
+  second of these examples: 
+  
+    enum escapes { BELL = '\a', BACKSPACE = '\b', TAB = '\t',
+    NEWLINE = '\n', VTAB = '\v', RETURN = '\r' };
+     
+    enum months { JAN = 1, FEB, MAR, APR, MAY, JUN,
+    JUL, AUG, SEP, OCT, NOV, DEC };
+   
+    /* FEB = 2, MAR = 3, etc. */
+  
+  Names in different enumerations must be distinct. Values need not be distinct in the same enumeration. 
+  
+  Enumerations provide a convenient way to associate constant values with names, an alternative to `#define` with the 
+  advantage that the values can be generated for you.
+  
+  Although variables of `enum` types may be declared, compilers need  not check that what you store in such a variable is
+  a valid value for the enumeration.
+  
+  Nevertheless, enumeration variables offer the chance of checking and so are often better than #defines.
+  
+  In addition, a debugger may be able toprintvalues of enumeration variables in their symbolic form. 
+
+**2.4 Declarations**
+  
+  All variables must be declared before use, although certain declarations can be made implicitly by content.
+  
+  A declaration specifies a type, and contains a list of one or more variables of that type, as in 
+
+    int lower, upper, step;
+    char c, line[1000];
+
+  Variables can be distributed among declarations in any fashion; the lists above could well be written as:
+    
+    int lower;
+    int upper;
+    int step;
+    char c;
+    char line[1000];
+
+  The latter form takes more space, but is convenient for adding a comment to each declaration for subsequent 
+  modifications.
+  
+  A variable may also be initialized in its declaration. If the name is followed by an equals sign and an expression, the
+  expression serves as an initializer, as in 
+ 
+    char esc = '\\';
+    int i = 0;
+    int limit = MAXLINE+1;
+    float eps = 1.0e-5;
+
+  If the variable in question is not automatic, the initialization is done once only, conceptionally before the program 
+  starts executing, and the initializer must be a constant expression.
+  
+  An explicitly initialized automatic variable is initialized each time the function or block it is in i entered;
+  
+  the initializer may be any expression. External and static variables are initialized to zero by default.
+  
+  Automatic variables for which is no explicit initializer have undefined (i.e., garbage) values. 
+
+  The qualifier const can be applied to the declaration of any variable to specify that its value will not be changed. 
+  
+  For an array, the const qualifier says that the elements will not be altered.
+  
+    const double e = 2.71828182845905;
+    const char msg[] = "warning: ";
+
+  The const declaration can also be used with array arguments, to indicate that the function does not change that array: 
+ 
+    int strlen(const char[]);
+
+  The result is implementation-defined if an attempt is made to change a const. 
+
+**2.5 Arithmetic Operators**
+
+  Integer division truncates any fractional part. The expression 
+ 
+    x % y
+
+  produces the remainder when x is divided by y, and thus is zero when y divides x exactly.
+  
+  For example, a year is a leap year if it is divisible by 4 but not by 100, except that years divisible by 400 are leap 
+  years. Therefore: 
+
+  if ((year % 4 == 0 && year % 100 != 0) || year % 400 == 0)
+    printf("%d is a leap year\n", year);
+  else
+    printf("%d is not a leap year\n", year);
+
+  The `%` operator cannot be applied to a `float` or `double`. The direction of truncation for `/` and the sign of the 
+  result  for `%` are machine-dependent for negative operands, as is the action taken on overflow or underflow. 
+
+**2.6 Relational and Logical Operators**
+
+  The relational operators are: `>=`, `<=`, `>`, `<` and the logical operators are `&&` and `||`.
+  
+  The precedence of && is higher than that of ||, and both are lower than relational and equality operators, so 
+  expressions like 
+  
+  
